[gd_scene load_steps=19 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://image/gui_background.png" type="Texture" id=2]
[ext_resource path="res://image/illu_yachie.png" type="Texture" id=3]
[ext_resource path="res://image/illu_reimu.png" type="Texture" id=4]
[ext_resource path="res://font/VT323-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://image/chara_reimu.png" type="Texture" id=6]
[ext_resource path="res://image/chara_yachie.png" type="Texture" id=7]
[ext_resource path="res://image/chara_junko.png" type="Texture" id=8]
[ext_resource path="res://image/chara_seiga.png" type="Texture" id=9]
[ext_resource path="res://image/chara_meiling.png" type="Texture" id=10]
[ext_resource path="res://new_styleboxtexture.tres" type="StyleBox" id=11]
[ext_resource path="res://audio/money.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_color = Color( 0.917647, 0.968627, 0.305882, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 22
outline_color = Color( 0.917647, 0.968627, 0.305882, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_color = Color( 0.917647, 0.968627, 0.305882, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 48
outline_color = Color( 0.917647, 0.968627, 0.305882, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 20
extra_spacing_top = -10
extra_spacing_bottom = -10
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="gui_background" type="Sprite" parent="."]
position = Vector2( 400, 300 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="AvatarYachie" type="Sprite" parent="."]
position = Vector2( 740, 490 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="AvatarReimu" type="Sprite" parent="."]
position = Vector2( 50, 500 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="fixed_words" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label2" type="Label" parent="fixed_words"]
margin_left = 100.0
margin_top = 202.0
margin_right = 200.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Performer"

[node name="Label6" type="Label" parent="fixed_words"]
margin_left = 100.0
margin_top = 242.0
margin_right = 200.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Prestige"

[node name="Label7" type="Label" parent="fixed_words"]
margin_left = 100.0
margin_top = 282.0
margin_right = 200.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Stake Price"

[node name="Label8" type="Label" parent="fixed_words"]
margin_left = 100.0
margin_top = 322.0
margin_right = 200.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Your Stakes"

[node name="Label9" type="Label" parent="fixed_words"]
margin_left = 100.0
margin_top = 362.0
margin_right = 235.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Yachie's Stakes"

[node name="Label3" type="Label" parent="fixed_words"]
margin_left = 230.0
margin_top = 202.0
margin_right = 330.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Meiling"
align = 1

[node name="Label4" type="Label" parent="fixed_words"]
margin_left = 340.0
margin_top = 202.0
margin_right = 440.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Seiga"
align = 1

[node name="Label5" type="Label" parent="fixed_words"]
margin_left = 440.0
margin_top = 202.0
margin_right = 540.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Junko"
align = 1

[node name="chara_reimu" type="Sprite" parent="."]
position = Vector2( 80, 332 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="chara_yachie" type="Sprite" parent="."]
position = Vector2( 80, 369.5 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )

[node name="chara_junko" type="Sprite" parent="."]
position = Vector2( 490, 152 )
texture = ExtResource( 8 )

[node name="chara_seiga" type="Sprite" parent="."]
position = Vector2( 390, 152 )
texture = ExtResource( 9 )

[node name="chara_meiling" type="Sprite" parent="."]
position = Vector2( 280, 152 )
texture = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 580.0
margin_top = 140.0
margin_right = 760.0
margin_bottom = 350.0
color = Color( 0.772549, 0.662745, 0.662745, 0.32549 )

[node name="DynamicElements" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Cash" type="Label" parent="DynamicElements"]
margin_left = 100.0
margin_top = 420.0
margin_right = 212.0
margin_bottom = 463.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.992157, 0, 1 )
text = "Your Cash:
$ 1000"

[node name="Cash2" type="Label" parent="DynamicElements"]
margin_left = 550.0
margin_top = 420.0
margin_right = 690.0
margin_bottom = 473.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.992157, 0, 1 )
text = "Yachie's Cash:
$ 1000"
align = 2

[node name="MeilingPrestige" type="Label" parent="DynamicElements"]
margin_left = 230.0
margin_top = 242.0
margin_right = 330.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "3 / 9"
align = 1

[node name="MeilingPrice" type="Label" parent="DynamicElements"]
margin_left = 230.0
margin_top = 282.0
margin_right = 330.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "$ 300"
align = 1

[node name="MeilingBid1" type="Label" parent="DynamicElements"]
margin_left = 230.0
margin_top = 322.0
margin_right = 330.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1

[node name="MeilingBid2" type="Label" parent="DynamicElements"]
margin_left = 230.0
margin_top = 360.0
margin_right = 330.0
margin_bottom = 385.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1

[node name="SeigaPrestige" type="Label" parent="DynamicElements"]
margin_left = 340.0
margin_top = 242.0
margin_right = 440.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "3 / 9"
align = 1

[node name="SeigaPrice" type="Label" parent="DynamicElements"]
margin_left = 340.0
margin_top = 282.0
margin_right = 440.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "$ 300"
align = 1

[node name="SeigaBid1" type="Label" parent="DynamicElements"]
margin_left = 340.0
margin_top = 322.0
margin_right = 440.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1

[node name="SeigaBid2" type="Label" parent="DynamicElements"]
margin_left = 340.0
margin_top = 360.0
margin_right = 440.0
margin_bottom = 385.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1

[node name="JunkoPrestige" type="Label" parent="DynamicElements"]
margin_left = 440.0
margin_top = 242.0
margin_right = 540.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "3 / 9"
align = 1

[node name="JunkoPrice" type="Label" parent="DynamicElements"]
margin_left = 440.0
margin_top = 282.0
margin_right = 540.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "$ 300"
align = 1

[node name="JunkoBid1" type="Label" parent="DynamicElements"]
margin_left = 440.0
margin_top = 322.0
margin_right = 540.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1

[node name="JunkoBid2" type="Label" parent="DynamicElements"]
margin_left = 440.0
margin_top = 360.0
margin_right = 540.0
margin_bottom = 385.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
align = 1

[node name="Tips" type="Label" parent="DynamicElements"]
margin_left = 120.0
margin_top = 480.0
margin_right = 670.0
margin_bottom = 555.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Everyday, you can make 3 transactions. A performer's stake price will increase with her prestige. Try to earn as much money as possible in 10 days by purchasing and selling stakes."
autowrap = true

[node name="Phase" type="Label" parent="DynamicElements"]
margin_left = 100.0
margin_top = 60.0
margin_right = 594.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.803922, 0.8, 0.32549, 1 )
text = "Day 1/10 - Transaction 1/3"
align = 1

[node name="MeilingBuy" type="Button" parent="DynamicElements"]
margin_left = 240.0
margin_top = 400.0
margin_right = 315.0
margin_bottom = 425.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Bet"

[node name="BuyHealth" type="Button" parent="DynamicElements"]
margin_left = 600.0
margin_top = 200.0
margin_right = 737.023
margin_bottom = 225.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Upgrade ($ 200)"

[node name="BuyRange" type="Button" parent="DynamicElements"]
margin_left = 600.0
margin_top = 310.0
margin_right = 737.023
margin_bottom = 335.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Upgrade ($ 200)"

[node name="Skip" type="Button" parent="DynamicElements"]
margin_left = 630.0
margin_top = 356.0
margin_right = 710.0
margin_bottom = 381.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Skip"

[node name="MeilingSell" type="Button" parent="DynamicElements"]
margin_left = 240.0
margin_top = 430.0
margin_right = 315.0
margin_bottom = 455.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Sell"

[node name="SeigaSell" type="Button" parent="DynamicElements"]
margin_left = 350.0
margin_top = 430.0
margin_right = 425.0
margin_bottom = 455.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Sell"

[node name="JunkoSell" type="Button" parent="DynamicElements"]
margin_left = 458.0
margin_top = 430.0
margin_right = 533.0
margin_bottom = 455.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Sell"

[node name="SeigaBuy" type="Button" parent="DynamicElements"]
margin_left = 350.0
margin_top = 400.0
margin_right = 425.0
margin_bottom = 425.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Bet"

[node name="JunkoBuy" type="Button" parent="DynamicElements"]
margin_left = 458.0
margin_top = 400.0
margin_right = 533.0
margin_bottom = 425.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Bet"

[node name="JunkoBattle" type="Button" parent="DynamicElements"]
margin_left = 458.0
margin_top = 410.0
margin_right = 533.0
margin_bottom = 435.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Attend"

[node name="SeigaBattle" type="Button" parent="DynamicElements"]
margin_left = 350.0
margin_top = 410.0
margin_right = 425.0
margin_bottom = 435.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Attend"

[node name="MeilingBattle" type="Button" parent="DynamicElements"]
margin_left = 240.0
margin_top = 410.0
margin_right = 315.0
margin_bottom = 435.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.94902, 0.847059, 0.372549, 1 )
text = "Attend"

[node name="EquipHealth" type="Label" parent="DynamicElements"]
margin_left = 590.0
margin_top = 150.0
margin_right = 752.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Extra Health Point
1 / 3"
align = 1

[node name="EquipRange" type="Label" parent="DynamicElements"]
margin_left = 590.0
margin_top = 260.0
margin_right = 752.0
margin_bottom = 309.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Extra Attack Range
1 / 3"
align = 1

[node name="AudioMoney" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -15.0
[connection signal="pressed" from="DynamicElements/MeilingBuy" to="." method="_on_MeilingBuy_pressed"]
[connection signal="pressed" from="DynamicElements/BuyHealth" to="." method="_on_BuyHealth_pressed"]
[connection signal="pressed" from="DynamicElements/BuyRange" to="." method="_on_BuyRange_pressed"]
[connection signal="pressed" from="DynamicElements/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="DynamicElements/MeilingSell" to="." method="_on_MeilingSell_pressed"]
[connection signal="pressed" from="DynamicElements/SeigaSell" to="." method="_on_SeigaSell_pressed"]
[connection signal="pressed" from="DynamicElements/JunkoSell" to="." method="_on_JunkoSell_pressed"]
[connection signal="pressed" from="DynamicElements/SeigaBuy" to="." method="_on_SeigaBuy_pressed"]
[connection signal="pressed" from="DynamicElements/JunkoBuy" to="." method="_on_JunkoBuy_pressed"]
[connection signal="pressed" from="DynamicElements/JunkoBattle" to="." method="_on_JunkoBattle_pressed"]
[connection signal="pressed" from="DynamicElements/SeigaBattle" to="." method="_on_SeigaBattle_pressed"]
[connection signal="pressed" from="DynamicElements/MeilingBattle" to="." method="_on_MeilingBattle_pressed"]
